--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             </div>
         </div>
         <div class="botoes2">
-            <button onclick="window.open('https://api.whatsapp.com/send?phone=5585999224767&text=Quero%20solicitar%20meu%20Orçamento.%20Seguem%20abaixo%20as%20informações%20da%20minha%20Festa:', '_blank')" class="contatobtn"><img src="src/imgs/icons8-whatsapp-48.png" alt="whatsapp"></button>
-            <button class="contatobtn"><img src="src/imgs/icons8-instagram-48.png" onclick="window.open('https://www.instagram.com/picolenasuafestafortaleza/', '_blank')" alt="instagram"><a href="https://www.instagram.com/picolenasuafestafortaleza/"></button></a>
+            <button class="contatobtn"><a href="https://api.whatsapp.com/send?phone=5585999224767&text=Quero%20solicitar%20meu%20Orçamento.%20Seguem%20abaixo%20as%20informações%20da%20minha%20Festa:" target="_blank"><img src="src/imgs/icons8-whatsapp-48.png" alt="whatsapp"></a></button>
+            <button class="contatobtn1"><a href="https://www.instagram.com/picolenasuafestafortaleza/" target="_blank"><img src="src/imgs/icons8-instagram-48.png" alt="instagram"></a></button>
         </div>
     </footer>
 
@@ -86,9 +86,9 @@
         function enviarEmail() {
             
             // Configurar os parâmetros para o envio do e-mail
-            const serviceID = 'service_3r24xot';
-            const templateID = 'template_0mo2w17';
-            const userID = 'oOIoWO_izB-32PUBk';
+            const serviceID = 'privacy';
+            const templateID = 'privacy';
+            const userID = 'privacy';
     
             // Coletar os dados do formulário
             const nome = document.getElementById('nome').value;
